--- a/css/index.css
+++ b/css/index.css
@@ -1,2 +1,137 @@
+.info {
+  background: #000;
+  padding-top: 200px;
+  padding-bottom: 100px;
+}
+.info__title {
+  font-family: "Fugaz One", Arial, Helvetica, sans-serif;
+  color: #fff;
+  font-size: 56px;
+  line-height: 1;
+  margin-bottom: 30px;
+}
+.info .text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 30px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+.info .about {
+  color: #fff;
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 20px;
+  margin-right: 30px;
+}
+.info .about__text {
+  color: #fff;
+  font-family: "Roboto";
+  font-size: 30px;
+}
+.info .small__text {
+  font-family: "Roboto";
+  color: #fff;
+  font-size: 20px;
+  margin-left: 80px;
+  max-width: 600px;
+  margin: 0 auto;
+}
 
+.collection {
+  background: #000;
+  padding-top: 50px;
+}
+.collection__title--one {
+  color: #fff;
+  font-size: 40px;
+  font-family: "Fugaz One";
+  line-height: 1.55;
+}
+.collection__link {
+  font-family: "Roboto";
+  font-size: 14px;
+  color: #fff;
+  line-height: 1.55;
+  margin-top: 60px;
+}
+.collection__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  max-width: 600px;
+  margin: 0 auto;
+}
+.collection__inner {
+  max-width: 600px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.collection__inner-item {
+  max-width: 240px;
+}
+.collection__inner-title {
+  color: #fff;
+  font-family: "FugazOne", Arial, sans-serif;
+  line-height: 1.55;
+  font-weight: 400;
+  text-transform: uppercase;
+  position: relative;
+}
+.collection__inner-title::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: #9e9c9c;
+  height: 1px;
+}
+.collection__list {
+  list-style-type: none;
+  max-width: 220px;
+  height: 240px;
+  overflow-y: scroll;
+}
+.collection__list-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  position: relative;
+  padding: 30px 30px 30px 0;
+}
+.collection__list-item::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #9e9c9c;
+  height: 1px;
+}
+.collection__list-link {
+  color: #e70201;
+  text-decoration: none;
+  font-size: 13px;
+  font-weight: 500;
+  font-family: "Roboto";
+}
+.collection .marker {
+  color: #ffffff;
+  font-size: 13px;
+  font-weight: 500;
+  font-family: "Roboto";
+  margin-right: 50px;
+}
 /*# sourceMappingURL=index.css.map */
